[feat] shared obs for efficient ft

--- a/examples/train/pi0/async.yaml
+++ b/examples/train/pi0/async.yaml
@@ -52,3 +52,8 @@ wandb:
 # Maximum temporal delay steps
 # Set to N to enable random delays from [0, N]
 max_delay_steps: 8
+
+# Enable shared observation optimization
+# When true, trains all offsets [0, max_delay_steps] together with shared
+# observation embeddings instead of randomly sampling one offset per sample
+shared_observation: true
